Add OTP recovery and project analytics APIs